adjusted css to fix shaggy man image layout issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -73,17 +73,15 @@ aside {
 
 .friend {
 	text-align: center;
-	max-width: 600px;
-	height: 600px;
-	overflow:initial;
+	max-width: 200px;
+	height: 200px;
+	
 }
 
 .friend img {
-	width: 200px;
-	height: 200px;
+	width: 100%;
+	height: auto;
 	}
-
-
 
 
 footer {
